[package]
name = "coding-test"
version = "0.1.0"
edition = "2021"
authors = ["Vivek Sharma"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.34"
